# esp32-c3-guitest

./: .env  .gitmodules  Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
